--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,22 +18,17 @@ tasks:
     cmds:
       - "docker compose -f compose.yaml {{ .CLI_ARGS }}"
 
-  local:up:
+  up:
     desc: ローカル開発環境を起動します。
     cmds:
       - "task compose -- up"
 
-  local:build:
+  build:
     desc: ローカル開発環境のイメージをビルドします。
     cmds:
       - "task compose -- build"
 
-  local:logs:
-    desc: ローカル開発環境のログを表示します。
-    cmds:
-      - "task compose -- logs"
-
-  local:down:
+  down:
     desc: ローカル開発環境を停止します。
     cmds:
       - "task compose -- down --remove-orphans"
