--- a/compose.yaml
+++ b/compose.yaml
@@ -25,5 +25,7 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 2s
       retries: 10
+    volumes:
+      - ./database/schema.sql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
