タスク名変更漏れ

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,7 +10,7 @@ tasks:
   clean:
     desc: ローカル開発環境をクリーンアップします
     cmds:
-      - "task local:down"
+      - "task down"
       - "rm -rf ./tmp"
 
   compose:
